--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<h1>New Product</h1>
+<%= render "layouts/errors", :object => @product %>
 
 <%= form_for @product do |f| %>
   <%= f.label :name %>
