--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,4 @@
 <h1><%= @product.name %></h1>
 
 <p><%= link_to "Edit", edit_product_path(@product) %></p>
+<p><%= link_to "Delete", product_path(@product), :data => {:confirm => "You sure?", :method => "delete"} %></p>
