--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,18 @@
 <h1><%= @product.name %></h1>
 
-<p><%= link_to "Edit", edit_product_path(@product) %></p>
-<p><%= link_to "Delete", product_path(@product), :data => {:confirm => "You sure?", :method => "delete"} %></p>
+<% if @product.reviews.any? %>
+  <h4>Sorry ther are no reviews yet. You will be the first to review this product!</h4>
+
+  <ul>
+    <% @product.reviews.each do |review| %>
+      <li>
+        <%= review.name %> |
+        <p><%= link_to "Edit", edit_product_path(@product, review) %></p>
+        <p><%= link_to "Delete", product_path(@product, review), :data => {:confirm => "You sure?", :method => "delete"} %></p>
+    <% end %>
+  </ul>
+<% else %>
+  <p>There are no tasks yet!</p>
+<% end %>
+
+<p><%= link_to "Back", products_path %></p>
