--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -7,12 +7,13 @@
     <% @product.reviews.each do |review| %>
       <li>
         <%= review.name %> |
-        <p><%= link_to "Edit", edit_product_path(@product, review) %></p>
-        <p><%= link_to "Delete", product_path(@product, review), :data => {:confirm => "You sure?", :method => "delete"} %></p>
+        <p><%= link_to "Edit review", edit_product_review_path(@product, review) %></p>
+        <p><%= link_to "Delete", product_review_path(@product, review), :data => {:confirm => "You sure?", :method => "delete"} %></p>
     <% end %>
   </ul>
 <% else %>
   <p>There are no tasks yet!</p>
 <% end %>
 
+<p><%= link_to "New Review", new_product_review_path(@product) %></p>
 <p><%= link_to "Back", products_path %></p>
