--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -5,6 +5,8 @@
   <%= f.text_field :last_name %>
   <%= f.label :email %>
   <%= f.email_field :email %>
+  <%= f.label :pic %>
+  <%= f.text_field :pic %>
   <%= f.label :password %>
   <%= f.password_field :password %>
   <p><%= f.submit %></p>
