--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,16 @@
-<h1>New User</h1>
-
-<%= render "form" %>
+<div class="parallax-container valign-wrapper">
+  <div class="parallax"><%= image_tag "1pic", class: 'parallax-image' %></div>
+</div>
+<div class="container">
+  <div class="section">
+    <div class="row">
+      <div class="col s12 center">
+        <h4>Sign Up</h4>
+        <%= render "form" %>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="parallax-container valign-wrapper">
+  <div class="parallax"><%= image_tag "5pic", class: 'parallax-image' %></div>
+</div>
