--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,18 +1,14 @@
 <h1><%= @product.name %></h1>
 
 <% if @product.reviews.any? %>
-  <h4>Sorry ther are no reviews yet. You will be the first to review this product!</h4>
-
   <ul>
     <% @product.reviews.each do |review| %>
       <li>
-        <%= review.name %> |
-        <p><%= link_to "Edit review", edit_product_review_path(@product, review) %></p>
-        <p><%= link_to "Delete", product_review_path(@product, review), :data => {:confirm => "You sure?", :method => "delete"} %></p>
+        <%= review.name %> |<%= link_to "Edit", edit_product_review_path(@product, review) %> |<%= link_to "Delete", product_review_path(@product, review), :data => {:confirm => "You sure?", :method => "delete"} %></li>
     <% end %>
   </ul>
 <% else %>
-  <p>There are no tasks yet!</p>
+  <h4>Sorry ther are no reviews yet. You will be the first to review this product!</h4>
 <% end %>
 
 <p><%= link_to "New Review", new_product_review_path(@product) %></p>
