--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,6 +2,6 @@
 
 <ul>
   <% @products.each do |product| %>
-    <li><%= link_to product.name, product_path(product) %></li>
+    <li><%= link_to product.name, product_path(product) %> <%= link_to "Edit", edit_product_path(product) %> | <%= link_to "Delete", product_path(product), :data => {:confirm => "You sure?", :method => "delete" }%></li>
   <% end %>
 </ul>
