add more styling

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -9,5 +9,5 @@
   <%= f.text_field :made_from %>
   <%= f.label :picture %>
   <%= f.text_field :picture %>
-  <%= f.submit  %>
+  <%= f.submit class: 'btn'  %>
 <% end %>
