--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,15 +1,32 @@
-<h1><%= @product.name %></h1>
+<div class="row">
+  <% if @product.reviews.any? %>
+    <ul>
+      <% @product.reviews.each do |review| %>
+        <li>
+          <div class="col s12 m7">
+              <div class="card horizontal">
+                <div class="card-image">
+                  <img src='current_user.picture'>
+                </div>
+                <div class="card-stacked">
+                  <div class="card-content">
+                    <p><%= review.name %></p>
+                    <p><%= review.comment %></p>
+                  </div>
+                  <div class="card-action">
+                    <%= link_to "Edit", edit_product_review_path(@product, review) %> |<%= link_to "Delete", product_review_path(@product, review), :data => {:confirm => "You sure?", :method => "delete"} %></li>
+                  </div>
+                </div>
+              </div>
+            </div></li>
+      <% end %>
+    </ul>
+  <% else %>
+    <h4>Sorry ther are no reviews yet. You will be the first to review this product!</h4>
+  <% end %>
+</div>
 
-<% if @product.reviews.any? %>
-  <ul>
-    <% @product.reviews.each do |review| %>
-      <li>
-        <%= review.name %> |<%= link_to "Edit", edit_product_review_path(@product, review) %> |<%= link_to "Delete", product_review_path(@product, review), :data => {:confirm => "You sure?", :method => "delete"} %></li>
-    <% end %>
-  </ul>
-<% else %>
-  <h4>Sorry ther are no reviews yet. You will be the first to review this product!</h4>
-<% end %>
 
-<p><%= link_to "New Review", new_product_review_path(@product) %></p>
+
+<p><%= link_to "New Review", new_product_review_path(@product) %></p><br>
 <p><%= link_to "Back", products_path %></p>
