--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,3 +1,8 @@
-<h1>edit</h1>
-
-<%= render "form" %>
+<div class="container">
+  <h1>Edit Review</h1>
+  <div class="row">
+    <div class="col s12 m7">
+      <%= render "form" %>
+    </div>
+  </div>
+</div>
