--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -5,5 +5,5 @@
   <%= f.text_field :name %>
   <%= f.label :comment %>
   <%= f.text_field :comment %>
-  <p><%= f.submit %></p>
+  <p><%= f.submit class: 'btn'%></p>
 <% end %>
