--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,3 +1,9 @@
-<h1>New review for <%= @product.name %></h1>
 
-<%= render 'form' %>
+<div class="container">
+  <h1>New review for <%= @product.name %></h1>
+  <div class="row">
+    <div class="col s12 m7">
+      <%= render "form" %>
+    </div>
+  </div>
+</div>
