--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,19 +4,21 @@
 
 <ul>
   <% @products.each do |product| %>
-    <li><div class="row">
-      <div class="col s12 m7">
-        <div class="card">
-          <div class="card-image">
-            <img src="product.pitucre">
-          </div>
-          <div class="card-content">
-            <h5><%= link_to product.name, product_path(product) %></h5>
-            $<%= product.price %> -
-            Made In <%= product.made_from %>
-          </div>
-          <div class="card-action">
-            <%= link_to "Edit", edit_product_path(product) %> | <%= link_to "Delete", product_path(product), :data => {:confirm => "You sure?", :method => "delete" }%>
+    <li><div class="card large">
+      <div class="row">
+        <div class="col s12 m7">
+          <div class="card">
+            <div class="card-image">
+              <img src="product.pitucre">
+            </div>
+            <div class="card-content">
+              <h5><%= link_to product.name, product_path(product) %></h5>
+              $<%= product.price %> -
+              Made In <%= product.made_from %>
+            </div>
+            <div class="card-action">
+              <%= link_to "Edit", edit_product_path(product) %> | <%= link_to "Delete", product_path(product), :data => {:confirm => "You sure?", :method => "delete" }%>
+            </div>
           </div>
         </div>
       </div>
