show progress on testing the controller product

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -20,12 +20,10 @@
         <% end %>
       </ul>
     <% else %>
-      <h4>Sorry ther are no reviews yet. You will be the first to review this product!</h4>
+      <h4>Sorry there are no reviews yet. You will be the first to review this product!</h4>
     <% end %>
   </div>
 </div>
-
-
 
 <p><%= link_to "New Review", new_product_review_path(@product) %></p><br>
 <p><%= link_to "Back", products_path %></p>
